--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,8 @@
+ <% if flash[:notice] %>
+     <p id="notice">
+       <%= flash[:notice] %>
+     </p>
+ <% end %>
 <div class='container'>
   <div class='row'>
     <div class='col-md-3'>
@@ -17,8 +22,22 @@
           </td>
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
-          <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
-          <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
+          <td>
+            <% if current_user.favorited?(@book) %>
+              <%= link_to book_favorites_path(@book), method: :delete do %>
+              <i class="fas fa-heart"></i>
+            <% end %>
+            <% else %>
+              <%= link_to book_favorites_path(@book), method: :post do %>
+              <i class="far fa-heart"></i>
+            <% end %>
+            </td>
+          <% end %>
+          <td><%= @book.favorites.count %></td>
+          <% if current_user == @book.user %>
+            <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
+            <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
+          <% end %>
         </tr>
       </table>
     </div>
