--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -25,9 +25,12 @@
             <%= link_to book_favorites_path(book), method: :post do %>
             <i class="far fa-heart"></i>
             <% end %>
+            
           <% end %>
           <%= book.favorites.count %>
         </td>
+        <td><td>コメント数：<%= @book.book_comments.count %></td></td>
+
       </tr>
     <% end %>
   </tbody>
