--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -29,7 +29,7 @@
           <% end %>
           <%= book.favorites.count %>
         </td>
-        <td><td>コメント数：<%= @book.book_comments.count %></td></td>
+        <td><td>コメント数：<%= book.book_comments.count %></td></td>
 
       </tr>
     <% end %>
