--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -22,39 +22,26 @@
           </td>
           <td><%= link_to @book.title, book_path(@book) %></td>
           <td><%= @book.body %></td>
-<<<<<<< HEAD
+           <% if current_user == @book.user %>
+            <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
+            <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
+          <% end %>
           <td>
             <% if current_user.favorited?(@book) %>
               <%= link_to book_favorites_path(@book), method: :delete do %>
               <i class="fas fa-heart"></i>
               <%= @book.favorites.count %>
-              
             <% end %>
             <td>コメント数：<%= @book.book_comments.count %></td>
-            
             <% else %>
               <%= link_to book_favorites_path(@book), method: :post do %>
               <i class="far fa-heart"></i>
               <%= @book.favorites.count %>
-              
             <% end %>
             <td>コメント数：<%= @book.book_comments.count %></td>
-            
-            </td>
           <% end %>
-          
-          <% if current_user == @book.user %>
-            <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
-            <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
-          <% end %>
-        </tr>
-=======
-           <% if current_user == @book.user %>
-            <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success edit_book_#{@book.id}" %></td>
-            <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
-          <% end %>
+          </td>
           </tr>
->>>>>>> main
       </table>
       
       <table>
@@ -62,7 +49,7 @@
         <% book_comment_user = book_comment.user %>
         <tr>
     	    <td>
-    		    <%= link_to user_path(book_comment_user), class: "user_#{book_comment_user.id}" do %>
+    		    <%= link_to user_path(@book.user), class: "user_#{book_comment_user.id}" do %>
       		    <%= attachment_image_tag book_comment_user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg", size: "50x50" %><br>
       		    <%= book_comment_user.name %>
     		    <% end %>
