--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -45,6 +45,7 @@
       </table>
       
       <table>
+      <%= render 'layouts/errors', obj: @book %>
       <% @book.book_comments.each do |book_comment| %>
         <% book_comment_user = book_comment.user %>
         <tr>
