--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -11,6 +11,15 @@
       <tr>
         <td><%= attachment_image_tag(user, :profile_image, :fill, 50, 50, fallback: "no-image-icon.jpg") %></td>
         <td><%= user.name %></td>
+        <td>フォロー数:<%= user.following.count %></td>
+        <td>フォロワー数:<%= user.followers.count %></td>
+        <td>
+        <% if current_user.following?(@user) %>
+        <%= render 'users/unfollow' %>
+        <% else %>
+        <%= render 'users/follow' %>
+        <% end %>
+        </td>
         <td><%= link_to 'Show', user_path(user), class: "user_#{user.id}" %></td>
       </tr>
     <% end %>
