--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,15 @@
     <div class='col-md-3'>
       <h2>User info</h2>
       <%= render 'info', user: @user %>
+      <% if current_user.id != @user.id %>
+      <div id="follow_form">
+        <% if current_user.following?(@user) %>
+          <%= render 'users/unfollow' %>
+        <% else %>
+          <%= render 'users/follow' %>
+        <% end %>
+      </div>
+      <% end %>
       <h2 class="mt-3">New book</h2>
       <%= render 'books/form', book: @book %>
     </div>
