--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -8,8 +8,21 @@
 	  <th>introduction</th>
 	  <th><%= user.introduction %></th>
   </tr>
+  <tr>
+	  <th>follows</th>
+	  <th><%= link_to user.followings.count, user_followings_path(user) %></th>
+  </tr>
+   <tr>
+	  <th>followers</th>
+	  <th><%= link_to user.followers.count, user_followers_path(user) %></th>
+  </tr>
+ 
+
+
 </table>
 
+<% if current_user.id == user.id %>
 <div class='row'>
   <%= link_to '',edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
 </div>
+<% end %>
