--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,6 +10,15 @@
     <div class='col-md-3'>
       <h2>User info</h2>
       <%= render 'info', user: @user %>
+      <% if current_user.id != @user.id %>
+      <% if current_user.following?(@user) %>
+        
+        <%= link_to user_relationships_path(@user.id),  method: :delete, class: "btn btn-info" do %>フォローを外す<% end %>
+      <% else %>
+      
+        <%= link_to user_relationships_path(@user.id),method: :post, class: "btn btn-success" do %>フォローする <% end %>
+      <% end %>
+      <% end %>
       <h2 class="mt-3">New book</h2>
       <%= render 'books/form', book: @book %>
     </div>
