--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,3 +37,9 @@ div {
     margin-bottom: 10px;
   }
 }
+
+/*-----------_header.html-------------*/
+.search_form{
+  margin-top: 10px;
+  text-align: center;
+}
