--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,16 +17,7 @@
         <td><%= link_to book.title, book_path(book), class: "book_#{book.id}" %></td>
         <td><%= book.body %></td>
         <td>
-          <% if current_user.favorited?(book) %>
-            <%= link_to book_favorites_path(book), method: :delete do %>
-            <i class="fas fa-heart"></i>
-            <% end %>
-            <% else %>
-            <%= link_to book_favorites_path(book), method: :post do %>
-            <i class="far fa-heart"></i>
-            <% end %>
-            
-          <% end %>
+          <%= render "favorites/favorite-btn",book: book%>
           <%= book.favorites.count %>
         </td>
         <td><td>コメント数：<%= book.book_comments.count %></td></td>
