--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -27,45 +27,33 @@
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger destroy_book_#{@book.id}"%></td>
           <% end %>
           <td>
-            <% if current_user.favorited?(@book) %>
-              <%= link_to book_favorites_path(@book), method: :delete do %>
-              <i class="fas fa-heart"></i>
-              <%= @book.favorites.count %>
-            <% end %>
+            <%= render "favorites/favorite-btn",book: @book%>
+            <%= @book.favorites.count %>
             <td>コメント数：<%= @book.book_comments.count %></td>
-            <% else %>
-              <%= link_to book_favorites_path(@book), method: :post do %>
-              <i class="far fa-heart"></i>
-              <%= @book.favorites.count %>
-            <% end %>
-            <td>コメント数：<%= @book.book_comments.count %></td>
-          <% end %>
           </td>
           </tr>
       </table>
       
-      <table>
+    <table>
       <%= render 'layouts/errors', obj: @book %>
       <% @book.book_comments.each do |book_comment| %>
-        <% book_comment_user = book_comment.user %>
-        <tr>
-    	    <td>
-    		    <%= link_to user_path(@book.user), class: "user_#{book_comment_user.id}" do %>
-      		    <%= attachment_image_tag book_comment_user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg", size: "50x50" %><br>
-      		    <%= book_comment_user.name %>
-    		    <% end %>
-    	    </td>
-    	    <td><%= book_comment.content %></td>
-    	    <% if current_user == book_comment_user %>
-      	    <td><%= link_to 'Destroy', book_book_comment_path(book_comment.book_id, book_comment.id), class: 'btn-sm btn-danger', method: :delete %></td>
-    	    <% end %>
-        </tr>
+      <% book_comment_user = book_comment.user %>
+      <tr>
+    	  <td>
+    		  <%= link_to user_path(@book.user), class: "user_#{book_comment_user.id}" do %>
+      		  <%= attachment_image_tag book_comment_user, :profile_image, :fill, 50, 50, fallback: "no_image.jpg", size: "50x50" %><br>
+      		  <%= book_comment_user.name %>
+    		  <% end %>
+        </td>
+        <td><%= book_comment.content %></td>
+        <% if current_user == book_comment_user %>
+          <td><%= link_to 'Destroy', book_book_comment_path(book_comment.book_id, book_comment.id), class: 'btn-sm btn-danger', method: :delete ,remote: true%></td>
+        <% end %>
+      </tr>
       <% end %>
+      
     </table>
-    <%= form_with model:[@book,@book_comment], local: true do |f| %>
-      <%= f.text_area :content, size:"90x5" %><br>
-      <%= f.submit '送信'%>
-    <% end %>
+    <%= render "book_comments/comment-btn" %>
 
     </div>
   </div>
